FIX make the map dissapear on narrow screens, so that the site can be used on mobile screens

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -31,13 +31,19 @@ body {
     flex: 1;
 }
 
+.mainview-right-group {
+    flex: 1;
+}
+
+@media(max-width: 700px) {
+    .mainview-right-group {
+        display: none;
+    }
+}
+
 .bar-list {
     overflow-y: scroll;
     height: 100%;
-}
-
-.mainview-right-group {
-    flex: 1;
 }
 
 .gmap-div {
